--- a/javascript/web_vector_bitmap.html
+++ b/javascript/web_vector_bitmap.html
@@ -112,20 +112,35 @@
                     <summary class="t_box">예시보기</summary>
                     <div style="display:flex; justify-content:space-between; margin-left:10%; margin-right:10%">
                         <div>
-                            <p style="text-align:center;">안깨짐</p>
+                            <p style="text-align:center; width: 90%; background-color: rgb(87, 13, 13); color:#fff; border-radius: 10px; padding-top: 5px; padding-bottom: 5px; margin-bottom: 10px;">벡터(Vector)</p>
                             <figure>
-                                <img border-radius="5px" width="90%" src="../assets/img/yosh.jpg" alt="요시">
+                                <img style="border-radius:10px" width="90%" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/yosh.jpg" alt="요시 안깨짐">
                             </figure>
                         </div>
                         <div>
-                            <p style="text-align:center;">깨짐</p>
+                            <p style="text-align:center; width: 90%; background-color: rgb(87, 13, 13); color:#fff; border-radius: 10px; padding-top: 5px; padding-bottom: 5px; margin-bottom: 10px;">비트맵(bitmap)</p>
                             <figure>
-                                <img width="90%" src="../assets/img/yosh_crash.jpg" alt="요시">
+                                <img style="border-radius:10px" width="90%" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/yosh_crash.jpg" alt="요시 깨짐">
                             </figure>
                         </div>
                     </div>
                 </details>
                 <!-- 예시보기 끝 -->
+                <hr>
+                <h2 class="t_tit">Webp</h2>
+                <h2 class="t_tit2">Webp란?</h2>
+                <p class="t_desc2_html">
+                   WebP는 위와 같은 단점들을 모두 보완하기 위해 구글이 출시한 파일 포맷이며 WebP를 사용하면 고품질 이미지를 표현하면서도 용량은 PNG,JPG 등의 기존 압축 방식보다 파일 크기를 작게 할 수 있습니다.
+                </p>
+                <h2 class="t_tit2">WebP의 단점?</h2>
+                <p class="t_box">
+                    WebP 파일은 인터넷을 염두해 두고 만든 포맷이기에 오프라인에서 활용시 도움이 되지 않을 수 있으며, 폭 넓은 호환성을 가지고 있음에도 인터넷 익스플로러에선 WebP 이미지를 지원하지 못할 수 있고 약간의 압축으로도 이미지 품질이 저하될 수 있기에 이때문에 전문가라면 이를 고려해야합니다.
+                </p>
+                <h2 class="t_tit2">WebP는 래스터? 벡터?</h2>
+                <p class="t_box">
+                    WebP 파일은 래스터 파일의 일종이며 레스터는 개별 픽셀로 구성되는 반면, 벡터 파일은 수식과 패스로 구성됩니다.
+                </p>
+
             </div>
             
         </main>
