--- a/javascript/study/web_pop_join_push.html
+++ b/javascript/study/web_pop_join_push.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자바스크립트 : 배열 객체</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/dracula.css">
+    <title>자바스크립트 : 요소 객체</title>
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/dracula.css">
 </head>
 
 <body>
@@ -22,11 +22,11 @@
             </ul>
             <ul>
                 <li><a href="javascript05.html">문자열 객체</a></li>
-                <li class="active"><a href="javascript06.html">배열 객체</a></li>
+                <li><a href="javascript06.html">배열 객체</a></li>
                 <li><a href="javascript07.html">수학 객체</a></li>
                 <li><a href="javascript08.html">숫자 객체</a></li>
                 <li><a href="javascript09.html">브라우저 객체</a></li>
-                <li><a href="javascript10.html">요소 객체</a></li>
+                <li class="active"><a href="javascript10.html">요소 객체</a></li>
                 <li><a href="javascript11.html">이벤트 객체</a></li>
             </ul>
             <ul class="effect">
@@ -46,34 +46,43 @@
                 <li><a href="study/type.html">데이터 타입</a></li>
                 <li><a href="study/function.html">함수</a></li>
                 <li><a href="study/var.html">지역변수/전역변수</a></li>
+                <li><a href="study/element.html">요소 선택</a></li>
             </ul>
         </nav>
     </header>
     <!-- //header -->
+
     <main id="main">
         <div class="main_menu">
             <ul>
-                <li><a href="#sample01">01. 배열 속성 : length : 배열 길이 구하기 : 반환(숫자)</a></li>
-                <li><a href="#sample02">02. 배열 메서드 : join() : 배열 요소 문자열을 결합 : 반환(문자열) : ★★★</a></li>
-                <li><a href="#sample03">03. 배열 메서드 : push() : 배열 마지막 요소에 추가 : 반환(숫자) : ★★</a></li>
-                <li><a href="#sample04">04. 배열 메서드 : pop() : 배열 마지막 요소를 삭제 : 반환(삭제된 요소)</a></li>
-                <li><a href="#sample05">05. 배열 : </a></li>
-                <li><a href="#sample06">06. 배열 : </a></li>
-                <li><a href="#sample07">07. 배열 : </a></li>
-                <li><a href="#sample08">08. 배열 : </a></li>
-                <li><a href="#sample09">09. 배열 : </a></li>
-                <li><a href="#sample10">10. 배열 : </a></li>
+                <!--ul>li*17>a[href="#"]{$$} 사용함-->
+                <li><a href="#">01. 요소 메서드 : 선택자 : document.querySelector() : 요소 선택자</a></li>
+                <!--요즘 스타일-->
+                <li><a href="#">01. 요소 메서드 : 선택자 : document.querySelectorAll() : 모든 요소 선택자</a></li>
+                <!--요즘 스타일-->
+                <li><a href="#">01. 요소 메서드 : 선택자 : document.getElementById() : 아이디 요소 선택자</a></li>
+                <!--옛날 스타일-->
+                <li><a href="#">01. 요소 메서드 : 선택자 : document.getElementByClassName() : 클래스 요소 선택자</a></li>
+                <!--옛날 스타일-->
+                <li><a href="#">01. 요소 메서드 : 선택자 : document.getTagName() : 태그 요소 선택자</a></li>
+                <br>
+                <li><a href="#">01. 요소 메서드 : 텍스트 : innerText() : 요소에 텍스트 설정하기</a></li>
+                <li><a href="#">01. 요소 메서드 : 텍스트 : textContent() : 요소에 텍스트 설정하기</a></li>
+                <li><a href="#">01. 요소 메서드 : 텍스트 : innerHTML() : 요소에 텍스트(태그인식) 설정하기</a></li>
+                <li><a href="#">01. 요소 메서드 : 텍스트 : outerHTML() : 요소에 텍스트(태그인식) 설정하기</a></li>
+                <br>
+                <li><a href="#">01. 요소 메서드 : 클래스 : classList.add() : 클래스 추가하기</a></li>
+                <li><a href="#">01. 요소 메서드 : 클래스 : classList.remove() : 클래스 삭제하기</a></li>
+                <li><a href="#">01. 요소 메서드 : 클래스 : classList.toggle() : 클래스 추가/삭제하기</a></li>
+                <li><a href="#">01. 요소 메서드 : 클래스 : classList.contains() : 클래스 존재 여부 확인하기</a></li>
             </ul>
         </div>
-        <!-- main_menu -->
-
-        <!-- 메인 샘플 시작 -->
-        <div class="main_sample">
-
-            <!-- 1번 -->
-            <div id="sample01" class="sample">
-                <h3>01. 배열 속성 : length : 배열 길이 구하기 : 반환(숫자)</h3>
-                <p>length 속성은 배열의 길이를 구할 수 있습니다.</p>
+        <main id="main">
+            <div class="document">
+                <!-- 1번 -->
+                <div id="sample01" class="sample">
+                <h2 class="t_tit2">01. 배열 속성 : length : 배열 길이 구하기 : 반환(숫자)</h2>
+                <p class="t_desc2_css">length 속성은 배열의 길이를 구할 수 있습니다.</p>
                 <div class="table">
                     <table>
                         <colgroup>
@@ -93,29 +102,31 @@
                         <tbody>
                             <tr>
                                 <td class="sample01_N1">1</td>
-                                <td class="sample01_Q1"[100, 200, 300, 400, 500]></td>
+                                <td class="sample01_Q1">[100, 200, 300, 400, 500]></td>
                                 <td class="sample01_M1">length</td>
-                                <td class="sample01_P1"></td>
+                                <td class="sample01_P1">6</td>
                             </tr>
                             <tr>
                                 <td class="sample01_N2">2</td>
                                 <td class="sample01_Q2">['a','b','c','d','f']</td>
                                 <td class="sample01_M2">length</td>
-                                <td class="sample01_P2"></td>
+                                <td class="sample01_P2">5</td>
                             </tr>
                             <tr>
                                 <td class="sample01_N3">3</td>
                                 <td class="sample01_Q3">[1, 2, ['a', 'b']]</td>
                                 <td class="sample01_M3">length</td>
-                                <td class="sample01_P3"></td>
+                                <td class="sample01_P3">3</td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
+                <p class="t_box">자바스크립트 코드보기</p>
 
                 <div class="script">
-                    <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
-                    <pre><code class="language-js">//01번
+                    <div class="t_code">
+                        <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
+<pre><code class="language-js">//01번
 const arrNum = [100, 200, 300, 400, 500];
 
 document.querySelector(".sample01_N1").innerHTML = "1";
@@ -139,14 +150,15 @@ document.querySelector(".sample01_Q3").innerHTML = "[1, 2, ['a', 'b']]";
 document.querySelector(".sample01_M3").innerHTML = "length";
 document.querySelector(".sample01_P3").innerHTML = arr.length;
 </code></pre>
+                    </div>
                 </div>
-            </div>
-            <!-- 1번 끝 -->
-
-            <!-- 2번 -->
-            <div id="sample02" class="sample">
-                <h3>02. 배열 메서드 : join() : 배열 요소 문자열을 결합 : 반환(문자열)</h3>
-                <p>length 속성은 배열의 길이를 구할 수 있습니다.</p>
+                </div>
+                <!-- 1번 끝 -->
+                <hr>
+                <!-- 2번 -->
+                <div id="sample02" class="sample">
+                <h2 class="t_tit2">02. 배열 메서드 : join() : 배열 요소 문자열을 결합 : 반환(문자열)</h2>
+                <p class="t_desc2_css">length 속성은 배열의 길이를 구할 수 있습니다.</p>
                 <div class="table">
                     <table>
                         <colgroup>
@@ -168,46 +180,49 @@ document.querySelector(".sample01_P3").innerHTML = arr.length;
                                 <td class="sample02_N1">1</td>
                                 <td class="sample02_Q1">[100,200,300,400,500]</td>
                                 <td class="sample02_M1">join('')</td>
-                                <td class="sample02_P1"></td>
+                                <td class="sample02_P1">100200300400500</td>
                             </tr>
                             <tr>
                                 <td class="sample02_N2">2</td>
                                 <td class="sample02_Q2">[100,200,300,400,500]</td>
                                 <td class="sample02_M2">join(' ')</td>
-                                <td class="sample02_P2"></td>
+                                <td class="sample02_P2">100 200 300 400 500</td>
                             </tr>
                             <tr>
                                 <td class="sample02_N3">3</td>
                                 <td class="sample02_Q3">[100,200,300,400,500]</td>
                                 <td class="sample02_M3">join('★')</td>
-                                <td class="sample02_P3"></td>
+                                <td class="sample02_P3">100*200*300*400*500</td>
                             </tr>
                             <tr>
                                 <td class="sample02_N4">4</td>
                                 <td class="sample02_Q4">[100,200,300,400,500]</td>
                                 <td class="sample02_M4">join('-')</td>
-                                <td class="sample02_P4"></td>
+                                <td class="sample02_P4">100-200-300-400-500</td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
+                <p class="t_box">자바스크립트 코드보기</p>
 
                 <div class="script">
-                    <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
-                    <pre><code class="language-js">//join() 문 사용
+                    <div class="t_code">
+                        <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
+<pre><code class="language-js">//join() 문 사용
 const arrNum=[100,200,300,400,500];
 const text1 = arrNum.join('')
 const text2 = arrNum.join(' ')
 const text3 = arrNum.join('★')
 const text4 = arrNum.join('-')
 </code></pre>
+                    </div>
                 </div>
-            </div>
-            <!-- 2번 끝 -->
-
-            <!-- 3번 -->
-            <div id="sample03" class="sample">
-                <h3>03. 배열 메서드 : push() / pop(</h3>
+                </div>
+                <!-- 2번 끝 -->
+                <hr>
+                <!-- 3번 -->
+                <div id="sample03" class="sample">
+                <h2 class="t_tit2">03. 배열 메서드 : push() / pop()</h2>
                 <p>push() 메서드는 배열 마지막 요소에 추가하고, pop()메서드는 배열 마지막 요소를 삭제합니다.</p>
                 <div class="table">
                     <table>
@@ -232,25 +247,26 @@ const text4 = arrNum.join('-')
                                 <td class="sample03_N1">1</td>
                                 <td class="sample03_Q1">[100,200,300,400,500]</td>
                                 <td class="sample03_M1">push(600)</td>
-                                <td class="sample03_P1"></td>
+                                <td class="sample03_P1">100,200,300,400,500,600</td>
                                 <td class="sample03_A1">100,200,300,400,500,600</td>
                             </tr>
                             <tr>
                                 <td class="sample03_N2">2</td>
                                 <td class="sample03_Q2">[100,200,300,400,500]</td>
-                                <td class="sample03_M2">push(600)</td>
-                                <td class="sample03_P2"></td>
+                                <td class="sample03_M2">pop(500)</td>
+                                <td class="sample03_P2">100,200,300,400</td>
                                 <td class="sample03_A2">100,200,300,400</td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
-
+                <p class="t_box">자바스크립트 코드보기</p>
                 <div class="script">
-                    <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
-                    <pre><code class="language-js">//01번
+                    <div class="t_code">
+                        <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
+<pre><code class="language-js">//01번
 const arrNum = [100, 200, 300, 400, 500];
-const arrPush = arrNum.push(600
+const arrPush = arrNum.push(600)
 
 document.querySelector(".sample03_N1").innerHTML = "1";
 document.querySelector(".sample03_Q1").innerHTML = "[100,200,300,400,500]";
@@ -269,97 +285,23 @@ document.querySelector(".sample03_M2").innerHTML = "pop(600)";
 document.querySelector(".sample03_P2").innerHTML = arrPush2; //500 
 document.querySelector(".sample03_A2").innerHTML = arrNum2;  //100,200,300,400
 </code></pre>
+                    </div>
                 </div>
+                </div>
+                <!-- 3번 끝 -->
             </div>
-            <!-- 3번 끝 -->
+            
+        </main>
+        <!-- //main -->
 
-        </div>
-        <!-- 메인 샘플 끝 -->
-
-    </main>
-    <footer id="footer">
-        <a href="mailto:webstoryboy@naver.com">webstoryboy@naver.com</a>
-    </footer>
-    <!-- //footer -->
-    <script src="assets/js/highlight.min.js"></script>
-    <script>
-        hljs.highlightAll();
-    </script>
-    <script>
-        //01
-        {
-            const arrNum = [100, 200, 300, 400, 500];
-
-            document.querySelector(".sample01_N1").innerHTML = "1";
-            document.querySelector(".sample01_Q1").innerHTML = "[100, 200, 300, 400, 500]";
-            document.querySelector(".sample01_M1").innerHTML = "length";
-            document.querySelector(".sample01_P1").innerHTML = arrNum.length;
-
-            const arrTxt = ['a', 'b', 'c', 'd', 'f'];
-
-            document.querySelector(".sample01_N2").innerHTML = "1";
-            document.querySelector(".sample01_Q2").innerHTML = "['a','b','c','d','f']";
-            document.querySelector(".sample01_M2").innerHTML = "length";
-            document.querySelector(".sample01_P2").innerHTML = arrTxt.length;
-
-            const arr = [1, 2, ['a', 'b']];
-
-            document.querySelector(".sample01_N3").innerHTML = "1";
-            document.querySelector(".sample01_Q3").innerHTML = "[1, 2, ['a', 'b']]";
-            document.querySelector(".sample01_M3").innerHTML = "length";
-            document.querySelector(".sample01_P3").innerHTML = arr.length;
-        }
-
-        //02
-        {
-            const arrNum = [100, 200, 300, 400, 500];
-            const text1 = arrNum.join('')
-            const text2 = arrNum.join(' ')
-            const text3 = arrNum.join('★')
-            const text4 = arrNum.join('-')
-
-            document.querySelector(".sample02_N1").innerHTML = "1";
-            document.querySelector(".sample02_Q1").innerHTML = "[100,200,300,400,500]";
-            document.querySelector(".sample02_M1").innerHTML = "join('')"; //배열 값들의 사이 간격에 문구를 추가 가능
-            document.querySelector(".sample02_P1").innerHTML = text1;
-
-            document.querySelector(".sample02_N2").innerHTML = "2";
-            document.querySelector(".sample02_Q2").innerHTML = "[100,200,300,400,500]";
-            document.querySelector(".sample02_M2").innerHTML = "join(' ')"; //배열 값들의 사이 간격에 문구를 추가 가능
-            document.querySelector(".sample02_P2").innerHTML = text2;
-
-            document.querySelector(".sample02_N3").innerHTML = "3";
-            document.querySelector(".sample02_Q3").innerHTML = "[100,200,300,400,500]";
-            document.querySelector(".sample02_M3").innerHTML = "join('★')"; //배열 값들의 사이 간격에 문구를 추가 가능
-            document.querySelector(".sample02_P3").innerHTML = text3;
-
-            document.querySelector(".sample02_N4").innerHTML = "4";
-            document.querySelector(".sample02_Q4").innerHTML = "[100,200,300,400,500]";
-            document.querySelector(".sample02_M4").innerHTML = "join('-')"; //배열 값들의 사이 간격에 문구를 추가 가능
-            document.querySelector(".sample02_P4").innerHTML = text4;
-        }
-
-        //03
-        {
-            const arrNum = [100, 200, 300, 400, 500];
-            const arrPush = arrNum.push(600);
-
-            document.querySelector(".sample03_N1").innerHTML = "1";
-            document.querySelector(".sample03_Q1").innerHTML = "[100,200,300,400,500]";
-            document.querySelector(".sample03_M1").innerHTML = "push(600)";
-            document.querySelector(".sample03_P1").innerHTML = arrPush; //600을 추가하고 숫자레르 셈
-            document.querySelector(".sample03_A1").innerHTML = arrNum;  //100,200,300,400,500,600
-
-            const arrNum2 = [100, 200, 300, 400, 500];
-            const arrPush2 = arrNum2.pop();
-            document.querySelector(".sample03_N2").innerHTML = "2";
-            document.querySelector(".sample03_Q2").innerHTML = "[100,200,300,400,500]";
-            document.querySelector(".sample03_M2").innerHTML = "pop(600)";
-            document.querySelector(".sample03_P2").innerHTML = arrPush2; //500 
-            document.querySelector(".sample03_A2").innerHTML = arrNum2;  //100,200,300,400
-            // 푸시 메서드를 쓰면 전체 요소의 배열의 길이를 출력해주는거고
-        }
-    </script>
+        <footer id="footer">
+            <a href="mailto:webstoryboy@naver.com">webstoryboy@naver.com</a>
+        </footer>
+        <!-- //footer -->
+        <script src="../assets/js/highlight.min.js"></script>
+        <script>
+            hljs.highlightAll();
+        </script>
 </body>
 
 </html>
