--- a/javascript/study/web_site03.html
+++ b/javascript/study/web_site03.html
@@ -174,6 +174,35 @@
                     <p class="t_desc2_css">
                         폰트는 'GmarketSans'를 이용하고 .card 클래스를 생성해 카드 Ui를 구현합니다.
                     </p>
+                    <div style="display: flex; justify-content: space-between; flex-wrap: nowrap; " class="script">
+                        <div style="width: 33%;"class="t_code">
+<pre><code class="language-css">/* 한줄 효과 */
+overflow: hidden;
+white-space: nowrap;
+text-overflow: ellipsis;
+padding-right: 20px;
+
+</code></pre>
+                        </div>
+                        <div style="width: 33%;" class="t_code">
+<pre><code class="language-css">/* 세줄 효과 */
+overflow: hidden;
+text-overflow: ellipsis;
+display: -webkit-box;
+-webkit-line-clamp: 3; /*줄 효과*/
+-webkit-box-orient: vertical;
+</code></pre>
+                        </div>
+                        <div style="width: 33%;" class="t_code">
+<pre><code class="language-css"> /* ir 효과 */
+display: block;
+overflow: hidden;
+font-size: 0;
+line-height: 0;
+text-indent: -9999px;
+</code></pre>
+                        </div>
+                    </div>
                     <div class="result">
                         <!-- 결과보기 -->
                         <details>
